# yandex-music-rpc

./: .gitignore  README.md  app.py  pyproject.toml
modules/: rpc.py  yandexmusic.py
