[tool.poetry]
name = "yandex-music-rpc"
version = "0.1.0"
description = ""
authors = ["Nikolas Timofeev <timofeevnik41@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
yandex-music = "^2.0.1"
pypresence = "^4.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
